# fastapi-cinema-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  alembic.ini  alembic.production.ini  auth.py  cinema.db  database.py  docker-compose.yml  main.py  models.py  nohup.out  pyproject.toml  run_migrations.py  run_migrations_docker.sh  schemas.py  setup_db.py  test_db_connection.py
.github/workflows/: deploy.yml
alembic/: env.py
routers/: auth_router.py  bookings.py  movies.py  showtimes.py  users.py
tests/: conftest.py  test_auth.py  test_bookings.py  test_movies.py  test_showtimes.py  test_users.py
